--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React App</title>
     <script
-      crossorigin
+    crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
     ></script>
     <script
@@ -13,10 +13,13 @@
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script type="script/babel" src="index.js"></script>
+    <script type="text/babel" src="dist/index.js"></script>
+
   </head>
   <body>
     <div id="root"></div>
+      
+    </script>
 
   </body>
 </html>
